
1.6.0 RC9

 Bugfixes:

 - Problems with segments clickability (Java5+MacOSX-specific regression)
   http://sourceforge.net/support/tracker.php?aid=1436607

 - Windows closing/position problems/String problems 
   http://sourceforge.net/support/tracker.php?aid=1386155

 - Shortcuts active while menus are not
   http://sourceforge.net/support/tracker.php?aid=1446521


1.6.0 RC8

 Enchancements:

 - keeping Cursor at middle of working window
   http://sourceforge.net/support/tracker.php?aid=1228857

 Bugfixes:

 - Problems with segments visibility (RC7 regression)
   http://sourceforge.net/support/tracker.php?aid=1436607

 - Japanese mismatches
   http://sourceforge.net/support/tracker.php?aid=1392607

 - Regex exception when loading glossary
   http://sourceforge.net/support/tracker.php?aid=1438295

 - BOM problem in UTF-8 glossaries
   http://sourceforge.net/support/tracker.php?aid=1439547

 - Upgrade segmentation defaults each new version
   http://sourceforge.net/support/tracker.php?aid=1435711


1.6.0 RC7

 Enchancements:
 
 - Delete orphan segments from exported TMX file
   http://sourceforge.net/support/tracker.php?aid=1422364

 - Filters should be individually configured
   http://sourceforge.net/support/tracker.php?aid=1434121

 - Option for Text filter: Non-segmenting filter
   http://sourceforge.net/support/tracker.php?aid=1435349

 - Save project's backup each reload (up to 10 backups)
   http://sourceforge.net/support/tracker.php?aid=1435288

 Bugfixes:

 - Performance issue with Huge files
   http://sourceforge.net/support/tracker.php?aid=1427669

 - Dialogs/windows do not close on Escape
   http://sourceforge.net/support/tracker.php?aid=1422959

 - Structure of HTML not respected in output 
   (second iteration over a bugfix first appeared in 1.6.RC4)
   http://sourceforge.net/support/tracker.php?aid=1364265

 - Do not add encoding declaration meta if HTML has no header
   http://sourceforge.net/support/tracker.php?aid=1406630
